--- a/style.css
+++ b/style.css
@@ -3,7 +3,92 @@
 	padding: 0px;
 }
 
-p {
-	color: blue;
-
+header {
+	width: 100%;
+	height: 80px;
+	background-color: hotpink;
+	position: fixed;
+	top: 0px;
+	z-index: 1;
 }
+
+h1 {
+	color: white;
+}
+
+#first {
+	width: 200px;
+	height: 100px;
+	border: 2px solid blue;
+	margin-top: 50px;
+	margin-inline: 120px;
+	margin: 80px;
+}
+
+#second {
+	width: 200px;
+	height: 100px;
+	border: 5px solid green;
+	position: relative;
+	top: 50px;
+	left: 120px;
+}
+
+#test {
+	width: 200px;
+	height: 100px;
+	border: 4px dashed red;
+}
+
+#large {
+	width: 600px;
+	height: 400px;
+	position: relative;
+	background-color: grey;
+}
+
+#small {
+	height: 90px;
+	width: 90px;
+	background-color: yellow;
+	position: absolute;
+	right: 10px;
+	bottom: 150px;
+}
+
+#circle {
+	width: 90px;
+	height: 90px;
+	background-color: blueviolet;
+	border-radius: 50px;
+   	right: 45px;
+   	bottom: 130px;
+   	position: absolute;
+}
+
+#main {
+	position: sticky;
+	background-color: limegreen;
+	top: 159px;
+}
+
+p {
+	font-size: 18px;
+	margin-bottom: 10px;
+}
+
+.contact {
+	width:150px ;
+	height:40px ;
+	border: 3px solid purple;
+	font-size: 16px;
+	padding-top: 15px;
+	padding-left: 10px;
+	border-radius: 15%;
+	position: fixed;
+	bottom: 30px;
+	right: 200px;
+}
+
+
+
