--- a/style.css
+++ b/style.css
@@ -45,6 +45,8 @@ h1 {
 	height: 400px;
 	position: relative;
 	background-color: grey;
+	background: #020024;
+background: linear-gradient(208deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
 }
 
 #small {
